Set compilation to target JDK 8 and backport the code to JDK 8.  Tweak the documentation again for what should now really be a release!